send email white spaces fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -926,3 +926,6 @@ iframe #WordViewerStatusBar {
     width: 4px;
   }
 }
+.ql-editor{
+  white-space: unset;
+}
